# aclogs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package.json  setup.sh
.claude-plugin/: plugin.json
cli/: import_workouts.py  pyproject.toml
cli/gym_tracker/: db.py  main.py  models.py
cli/gym_tracker/commands/: block.py  exercise.py  progress.py  sets.py  workout.py
cli/tests/: conftest.py  test_block.py  test_db.py  test_exercise.py  test_progress.py  test_set.py  test_workout.py
dashboard/: .gitignore  package-lock.json  package.json  relay.config.json  schema.graphql  vite.config.ts
dashboard/src/: App.tsx  DateRangeContext.ts  RelayEnvironment.ts  index.css  main.tsx
dashboard/src/views/: HistoryView.tsx  ProgressView.tsx
docs/: CNAME  index.html
hooks/: session-start
server/: .env.example  package-lock.json  package.json  vitest.config.ts
server/prisma/: schema.prisma
server/src/: index.ts  schema.ts  yoga.ts
server/tests/: exercises.test.ts  progress.test.ts  smoke.test.ts  workouts.test.ts
skills/: setup.md
skills/import-workouts/: SKILL.md
skills/remote-control/: SKILL.md
skills/start-servers/: SKILL.md
skills/stop-servers/: SKILL.md
workouts/: 2026-03-05-MPA-squad-W9-lower.md  2026-03-10-MPA-squad-W10-upper.md  2026-03-12-MPA-squad-W10-lower.md  2026-03-17-MPA-squad-W11-upper.md  2026-03-19-MPA-squad-W11-lower.md  2026-03-24-MPA-squad-W12-upper-deload.md  progress.md
workouts/2026/: 2026-03-27-AC-strength-upper-W12.md  2026-03-31-MPA-squad-test-upper.md  2026-04-02-MPA-squad-test-lower.md
(+32 files in other folders)
