[project]
name = "gym-tracker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
gym = "gym_tracker.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
